--- a/Unsupervised Learning.ipynb
+++ b/Unsupervised Learning.ipynb
@@ -18,16 +18,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Unsupervised learning* refers to techniques where we do not give the algorithm a target output (e.g. a set of expected classifications of the data). Instead, the algorithm must interpret the data and draw some kind of conclusion entirely on its own, without any supervision from us.\n",
+    "*Unsupervised learning* refers to machine learning techniques where we do not give the learning algorithm a target output (e.g. a set of expected classifications of the data). Instead, the algorithm must interpret the data entirely on its own, without any supervision from the user. Unsupervised learning is useful when we don't have access to pre-labelled data (e.g. this set of measurements corresponds to a faulty unit, while this other set of measurements corresponds to a funcitoning unit), or when we're more interested in exploring what trends exist in data (including those we may not necessarily know about).\n",
     "\n",
-    "Unsupervised learning is particularly attractive in the context of monitoring because it has the potential to notice and determine trends that would go unrecognised by a human operator. Example applications include:\n",
-    "* Time series anomaly detection\n",
+    "Applications of unsupervised learning in the context of systems administration include:\n",
+    "* Automated detection of anomalous events from time series data\n",
+    " * e.g. a spike in write latency on a NetApp that might indicate an errant job\n",
     "* Detection of abnormal events in logs\n",
-    "* Predictive models (e.g. Google's learned PUE model https://docs.google.com/a/google.com/viewer?url=www.google.com/about/datacenters/efficiency/internal/assets/machine-learning-applicationsfor-datacenter-optimization-finalv2.pdf) (TODO: is this supervised or unsupervised?\n",
+    "* Learned models of a system of many variables which can then be used for prediction\n",
+    " * e.g. a learned model of PUE from load, outside air temperature etc. that can then be used to investigate the effect of changing one of the variables - See [Further Reading](#Further Reading) for more on this\n",
+    " \n",
+    "For this workshop, we'll be focusing on a simple example of time series anomaly detection. Our approach will be to build up a library of \"normal\" waveform shapes, and use that library to try and reconstruct a waveform to be tested. If the reconstruction is poor, then the waveform is likely to contain something abnormal, and is therefore anomalous.\n",
     "\n",
-    "For this workshop, we'll be focusing on a simple example of time series anomaly detection. Our algorithm will be based on an approach that attempts to reconstruct a waveform using the wave patterns that it has seen before. If the reconstruction is poor, then the waveform is likely of a form that the algorithm hasn't seen before, and therefore is anomalous. TODO: is this really unsupervised? We're still giving it some idea of what's \"normal\", right?\n",
-    "\n",
-    "The example is based on Chapter 4, *More Complex, Adaptive Models* from [Practical Machine Learning](https://www.safaribooksonline.com/library/view/practical-machine-learning/9781491914151/ch04.html)."
+    "This example is based on Chapter 4, *More Complex, Adaptive Models* from [Practical Machine Learning](https://www.safaribooksonline.com/library/view/practical-machine-learning/9781491914151/ch04.html)."
    ]
   },
   {
