--- a/Unsupervised Learning.ipynb
+++ b/Unsupervised Learning.ipynb
@@ -11,25 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Introduction\n",
+    "\n",
     "*Unsupervised learning* refers to machine learning techniques where we do not give the learning algorithm a target output (e.g. a set of expected classifications of the data). Instead, the algorithm must interpret the data entirely on its own, without any supervision from the user. Unsupervised learning is useful when we don't have access to pre-labelled data (e.g. this set of measurements corresponds to a faulty unit, while this other set of measurements corresponds to a funcitoning unit), or when we're more interested in exploring what trends exist in data (including those we may not necessarily know about).\n",
     "\n",
     "Applications of unsupervised learning in the context of systems administration include:\n",
+    "* Detection of abnormal events in logs\n",
     "* Automated detection of anomalous events from time series data\n",
     " * e.g. a spike in write latency on a NetApp that might indicate an errant job\n",
-    "* Detection of abnormal events in logs\n",
     "* Learned models of a system of many variables which can then be used for prediction\n",
-    " * e.g. a learned model of PUE from load, outside air temperature etc. that can then be used to investigate the effect of changing one of the variables - See [Further Reading](#Further Reading) for more on this\n",
+    " * e.g. a learned model of PUE from load, outside air temperature etc. that can then be used to investigate the effect of changing one of the variables\n",
     " \n",
-    "For this workshop, we'll be focusing on a simple example of time series anomaly detection. Our approach will be to build up a library of \"normal\" waveform shapes, and use that library to try and reconstruct a waveform to be tested. If the reconstruction is poor, then the waveform is likely to contain something abnormal, and is therefore anomalous.\n",
-    "\n",
-    "This example is based on Chapter 4, *More Complex, Adaptive Models* from [Practical Machine Learning](https://www.safaribooksonline.com/library/view/practical-machine-learning/9781491914151/ch04.html)."
+    "See [Further Reading](#Further-Reading) for more on these examples."
    ]
   },
   {
@@ -38,7 +31,11 @@
    "source": [
     "## Anomaly Detection\n",
     "\n",
-    "In the context of time series data, we can define an \"anomaly\" as simply being some pattern in the data that we haven't seen before.\n",
+    "For this workshop, we'll be focusing on a simple example of time series anomaly detection.\n",
+    "\n",
+    "This example is based on Chapter 4, *More Complex, Adaptive Models* from [Practical Machine Learning](https://www.safaribooksonline.com/library/view/practical-machine-learning/9781491914151/ch04.html).\n",
+    "\n",
+    "### Simple Anomaly Detection\n",
     "\n",
     "In some cases, we may be able to detect such novel patterns by merely looking for any values beyond a certain threshold:\n",
     "\n",
@@ -52,39 +49,43 @@
     "\n",
     "What we want more generally is a method that can learn what constitutes a \"normal\" waveform not just in terms of its instantaneous value in terms of its *shape*.\n",
     "\n",
+    "Our approach will be to define an \"anomaly\" as being some pattern in the waveform that we haven't seen before. Our algorithm will build up a library of \"normal\" waveform shapes, and use that library to try and reconstruct a waveform to be tested. If the reconstruction is poor, then the waveform is likely to contain something abnormal, and is therefore anomalous.\n",
+    "\n",
     "### Clustering\n",
     "\n",
-    "Let us take a step back from our problem and have a look at a simpler example to demonstrate how we might go about determining what constitutes a sense of what is \"normal\".\n",
+    "Let us take a step back from our problem and have a look at a simple example to demonstrate how we might go about determining what counts as \"normal\".\n",
     "\n",
     "Suppose we are manufacturing power supplies. Our power supplies use capacitors from two different manufacturers. During the QA phase, for each  power supply sample we measure two variables: power efficiency and voltage ripple. We could plot a graph of one variable against another to get a sense of the distribution of the data:\n",
     "\n",
     "TODO add image with two clusters\n",
     "\n",
-    "These two variables, of course, have absolute limits, as shown by the box on the graph. Within these limits, however, we find that the data tends to form two groups, or *clusters*, depending on which type of capacitor is used.\n",
+    "These two variables have acceptance tolerances, as shown by the box on the graph. Within these limits, however, we find that the data tends to form two groups, or *clusters*, depending on which type of capacitor is used.\n",
     "\n",
-    "Suppose the next power supply that comes off the assembly line meets the *absolute* requirements (falls within the box on the graph), but falls a way outside either group:\n",
-    "\n",
-    "TODO image\n",
-    "\n",
-    "We detect this anomaly by the fact that it lies outside of either of these clusters. Here our clusters were defined in a two-dimensional space defined by two variables (or two *features*, in machine learning parlance); but the approach is generalisable to three-dimensional space, defined by three features:\n",
+    "Suppose the next power supply that comes off the assembly line meets the tolerance requirements (falls within the box), but falls a way outside either of the two groups:\n",
     "\n",
     "TODO image\n",
     "\n",
-    "Or an *n*-dimensional space, defined by *n* features. (The general case is a little harder to visualise - so just stick with the three-dimensional case and pretend there are more dimensions.)\n",
+    "This is a sign that there might be something wrong with the unit - that it is in some way anomalous.\n",
     "\n",
-    "Machine learning algorithms exist to identify such clusters automatically. The particular method we'll be using is called the *k-means clustering* algorithm.\n",
+    "Here our clusters were defined in the two-dimensional space defined by two variables (or two *features*, in machine learning parlance). But the approach is easily generalisable to three-dimensional space, defined by three features:\n",
+    "\n",
+    "TODO image\n",
+    "\n",
+    "Or an *n*-dimensional space, defined by *n* features. (The general case is a little harder to visualise - so just imagine a three-dimensional space and pretend there are more dimensions.)\n",
+    "\n",
+    "Clusters can be identified programatically using a *clustering* algorithm. The particular method we'll be using is called *k-means clustering*.\n",
     "\n",
     "### Waveform Space\n",
     "\n",
-    "The first step in applying such a technique to waveforms would be defining the space in which clusters will be formed. We can split the waveform into chunks to give us separate \"samples\", but what will our *features* be - what are the variables that will define the *n*-dimensional space?\n",
+    "The first step in applying such a technique to waveforms would be defining the space in which clusters will be formed. The first step will be to split the waveform into chunks to give us separate \"samples\". But what will our *features* be - what are the variables that will define the *n*-dimensional space?\n",
     "\n",
-    "We could go with measurements of each chunk such as maximum, minimum and spread. But since our technique is generalisable to any number of dimensions, we can do something a bit more clever: we can take each element of the chunk as a separate dimension. For a chunk containing 32 instantaneous values, we define a 32-dimensional space in which to form our clusters.\n",
+    "We could go with standard measurements of each chunk such as maximum, minimum and spread. But since our technique is generalisable to any number of dimensions, we can do something a bit more clever: we can take each element of the chunk as a separate dimension. For a chunk containing 32 time values, we define a 32-dimensional space. It is in this 32-dimensional space that we will form our clusters of waveform chunks.\n",
     "\n",
     "### Waveform Anomaly Detection\n",
     "\n",
-    "In the example of the power supplies, we detected anomalous samples based on the distance from clusters. For our waveform example, we're going to do something a little bit different, which lends itself more easily to visualisation.\n",
+    "In the example of the power supplies, we detected anomalous samples based on the distance from clusters. For our waveforms, we're going to take a slightly different approach so that we can visualise what's going on.\n",
     "\n",
-    "Consider the clusters in *n*-dimensional space again. Similar chunks will cluster together. The middle of each cluster (the *centroid*) will then provide some measure of the prototypical waveform pattern that all those chunks are specific instances of. (If this is difficult to visualise, the other way to consider it is that the centroid is simply the mean of all waveform samples in that cluster.)\n",
+    "Consider our 32-dimensional waveform space. Each point in this space represents a possible waveform chunk. Similar chunks will cluster together. The middle of each cluster (the *centroid*) will provide some measure of the prototypical waveform pattern that all those chunks are specific instances of. (If this is difficult to visualise, the other way to consider it is that the centroid is simply the mean of all waveform samples in that cluster.)\n",
     "\n",
     "Note that the centroid, being a point in the waveform space, is itself a waveform. Thus, the cluster centroids provide us with a set of \"normal\" waveform chunks.\n",
     "\n",
