--- a/Unsupervised Learning.ipynb
+++ b/Unsupervised Learning.ipynb
@@ -39,15 +39,17 @@
     "\n",
     "In some cases, we may be able to detect such novel patterns by merely looking for any values beyond a certain threshold:\n",
     "\n",
-    "TODO add image\n",
+    "<img src=\"images/simple_anomaly.jpg\" style=\"max-width: 45%\" />\n",
     "\n",
     "In other cases, though, the structure of the waveform may prevent detection of anomalies using this method:\n",
     "\n",
     "And more subtle errors - a change in the shape of a periodic waveform, for examples - will be simply impossible to pick up with such a method:\n",
     "\n",
-    "TODO add image\n",
+    "<img src=\"images/harder_anomaly.jpg\" style=\"max-width: 45%\" />\n",
     "\n",
     "What we want more generally is a method that can learn what constitutes a \"normal\" waveform not just in terms of its instantaneous value in terms of its *shape*.\n",
+    "\n",
+    "<img src=\"images/really_hard_anomaly.jpg\" style=\"max-width: 45%\" />\n",
     "\n",
     "Our approach will be to define an \"anomaly\" as being some pattern in the waveform that we haven't seen before. Our algorithm will build up a library of \"normal\" waveform shapes, and use that library to try and reconstruct a waveform to be tested. If the reconstruction is poor, then the waveform is likely to contain something abnormal, and is therefore anomalous.\n",
     "\n",
@@ -57,21 +59,17 @@
     "\n",
     "Suppose we are manufacturing power supplies. Our power supplies use capacitors from two different manufacturers. During the QA phase, for each  power supply sample we measure two variables: power efficiency and voltage ripple. We could plot a graph of one variable against another to get a sense of the distribution of the data:\n",
     "\n",
-    "TODO add image with two clusters\n",
+    "<img src=\"images/clusters.jpg\" style=\"max-width: 45%\" />\n",
     "\n",
     "These two variables have acceptance tolerances, as shown by the box on the graph. Within these limits, however, we find that the data tends to form two groups, or *clusters*, depending on which type of capacitor is used.\n",
     "\n",
     "Suppose the next power supply that comes off the assembly line meets the tolerance requirements (falls within the box), but falls a way outside either of the two groups:\n",
     "\n",
-    "TODO image\n",
+    "<img src=\"images/clusters_anomaly.jpg\" style=\"max-width: 45%\" />\n",
     "\n",
     "This is a sign that there might be something wrong with the unit - that it is in some way anomalous.\n",
     "\n",
-    "Here our clusters were defined in the two-dimensional space defined by two variables (or two *features*, in machine learning parlance). But the approach is easily generalisable to three-dimensional space, defined by three features:\n",
-    "\n",
-    "TODO image\n",
-    "\n",
-    "Or an *n*-dimensional space, defined by *n* features. (The general case is a little harder to visualise - so just imagine a three-dimensional space and pretend there are more dimensions.)\n",
+    "Here our clusters were defined in the two-dimensional space defined by two variables (or two *features*, in machine learning parlance). But we can easily visualise how the approach can generalisable to three-dimensional space, defined by three features - or even an *n*-dimensional space, defined by *n* features. (The general case is a little harder to visualise - so just imagine a three-dimensional space and pretend there are more dimensions.)\n",
     "\n",
     "Clusters can be identified programatically using a *clustering* algorithm. The particular method we'll be using is called *k-means clustering*.\n",
     "\n",
