Integrate 'Further Reading' with rest of notebook
It's 1 AM, not being perfectionist and finding lots of extra reading material :)

--- a/Unsupervised Learning.ipynb
+++ b/Unsupervised Learning.ipynb
@@ -20,9 +20,7 @@
     "* Automated detection of anomalies time series data\n",
     " * e.g. a spike in write latency on a NetApp that might indicate an errant job\n",
     "* Learned models of a system, which can then be used for prediction\n",
-    " * e.g. a learned model of PUE from machine load, outside air temperature etc. that can then be used to investigate the effect of making a change to one of the variable\n",
-    " \n",
-    "See [Further Reading](#Further-Reading) for more on these examples."
+    " * e.g. a learned model of PUE from machine load, outside air temperature etc. that can then be used to investigate the effect of making a change to one of the variable (see Google's [Better data centers through machine learning](http://googleblog.blogspot.co.uk/2014/05/better-data-centers-through-machine.html))"
    ]
   },
   {
@@ -71,7 +69,7 @@
     "\n",
     "Here our clusters existed in the two-dimensional space defined by two variables (or two *features*, in machine learning parlance). But we can easily visualise how the approach can generalise to a three-dimensional space, defined by three features - or even an *n*-dimensional space, defined by *n* features. (The general case is a little harder to visualise, so just imagine a three-dimensional space and pretend there are more dimensions.)\n",
     "\n",
-    "Clusters can be identified programatically using a *clustering* algorithm. The particular method we'll be using is called *k-means clustering*.\n",
+    "Clusters can be identified programatically using a *clustering* algorithm. The particular method we'll be using is called *k-means clustering*. (See [Cluster - K-means algorithm](https://class.coursera.org/ml-003/lecture/78) on Coursera if you're interested in more details of how the k-means algorithm works.)\n",
     "\n",
     "### Waveform Space\n",
     "\n",
@@ -188,13 +186,6 @@
     "print(\"ekg_data[1]:\\t\", ekg_data[1])\n",
     "print(\"ekg_data.min:\\t\", ekg_data.min())\n",
     "print(\"ekg_data.max:\\t\", ekg_data.max())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: box plot or something"
    ]
   },
   {
@@ -761,21 +752,6 @@
     "This problem could have been solved in different ways. For example, we could have trained a predictive neural network model, and examined the difference between the predicted waveform and the actual waveform. In general, there is no 'one size fits all' solution in machine learning - different techniques will be required for different problems.\n",
     "\n",
     "A standalone script containing our full set of code is available in this repository as `learn.py`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Further Reading"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* See [Cluster - K-means algorithm](https://class.coursera.org/ml-003/lecture/78) on Coursera for more information on how the k-means algorithm works\n",
-    "* Google's [http://googleblog.blogspot.co.uk/2014/05/better-data-centers-through-machine.html](Better data centers through machine learning) shows a use of neural networks to build a predictive model of data center PUE"
    ]
   }
  ],
